<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_first"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Live"
            android:title="@string/start_Live" />

        <item
            android:id="@+id/nav_upload"
            android:title="@string/upload_event" />


        <item
            android:id="@+id/nav_history"
            android:title="@string/history_data" />

        <item
            android:id="@+id/nav_personal_history"
            android:title="@string/personal_history" />

        <item
            android:id="@+id/nav_upload_gdrive"
            android:title="@string/nav_upload_gdrive" />
x
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/introdution" />


        <item
            android:id="@+id/nav_manage"
            android:title="@string/law" />

        <item
            android:id="@+id/nav_account_information"
            android:title="@string/accountinform" />


        <item
            android:id="@+id/nav_setting"
            android:title="@string/nav_setting" />


        <item
            android:id="@+id/nav_logout"
            android:title="@string/loginout" />
    </group>

</menu>
