<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/carview2x" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/account"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_passward"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <EditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd" />

    <EditText
        android:id="@+id/carNum"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/car_num"
        android:inputType="textCapCharacters"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Spinner
        android:id="@+id/car_size"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNum" />

    <Button
        android:id="@+id/register_data_register"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_login_style"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:onClick="send_data"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carNum" />

</LinearLayout>