<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".history_search">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="111dp"
        android:text="@string/search_location"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="179dp"
        android:layout_weight="1"
        android:text="@string/date"
        android:textSize="22sp" />

    <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/textView5"
    android:layout_centerVertical="true"
    android:text="@string/time"
    android:textSize="22sp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_marginStart="-100dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="date"
        android:onClick="datePicker"/>


    <EditText
        android:id="@+id/editTime"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="-99dp"
        android:layout_toEndOf="@+id/textView5"
        android:ems="10"
        android:gravity="center"
        android:inputType="time"
        android:onClick="timePicker"/>

    <EditText
        android:id="@+id/editlocation"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/button3"
        android:layout_width="299dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="133dp"
        android:background="#333333"
        android:onClick="Onsubmit"
        android:text="@string/submit"
        android:textColor="#ffffff" />

</RelativeLayout>