<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rtmp_stream">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/activity_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                    <TextView
                        android:id="@+id/explanation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/explanation"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <Button
                        android:id="@+id/switch_example"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/switch_media_session" />

                </LinearLayout>

            </ScrollView>

            <com.nclab.carview2.PictureinPicture.MovieView
                android:id="@+id/movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:title="@string/title_bigbuckbunny" />

            <Button
                android:id="@+id/windowsmall"
                android:layout_width="63dp"
                android:layout_height="57dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/smallwindow" />

            <Button
                android:id="@+id/RoadConstruction"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignEnd="@+id/CarAccident"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="62dp"
                android:layout_weight="1"
                android:background="@drawable/error" />

            <Button
                android:id="@+id/CarAccident"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/accidentcopy" />

            <Button
                android:id="@+id/Jam"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@+id/CarAccident"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="2dp"
                android:layout_toStartOf="@+id/RoadConstruction"
                android:layout_weight="1"
                android:background="@drawable/carcopy3" />

            <Button
                android:id="@+id/switch_camera"
                android:layout_width="63dp"
                android:layout_height="57dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="204dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/camerarotate" />

            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="17dp"
                android:gravity="center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_start_stop"
                    style="@android:style/Widget.Button"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/icon_play" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />

            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nv_rtp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:paddingBottom="30dp"
            app:headerLayout="@xml/options_header"
          ></com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>